--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -10,62 +11,187 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: cadetblue;
+    background-color: black;
 }
 /* COUNTING MAIN CONTAINER */
 .game-board {
-    display: flexbox;
     justify-content: center;
     align-items: center;
-    padding: 12px;
-}
-.points {
-    margin-top: 16px;
-    display: flex;
-    justify-content: center;
-    gap: 16px;
+    color: white;
 }
 
 .game-status {
+    min-width: 100vw;
     display: flex;
     justify-content: center;
-    font-size: large;
+    font-size: 22px;
+    font-weight: 700;
 }
-.game-options {
+.player-options {
     display: flex;
     justify-content: center;
     gap: 22px;
 }
-.player, .computer, span {
-    font-size: 20px;
+
+.center-options {
+    min-width: 100vw;
+    min-height: 50vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4rem;
 }
 
-.btn {
-    width: 120px;
-    height: 80px;
-    border-radius: 10px;
-    font-size: 16px;
-    font-weight: 600;
+.right-side {
+    margin-right: 11rem;
 }
+
+/* PLAYER BUTTONS */
+.btn {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    font-size: 16px;
+    background-color: inherit;
+    border: 0;
+    transition: 200ms;
+    cursor: pointer;
+    opacity: 0.9;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+    opacity: 1;
+}
+
+#Rock {
+    background-image: url('./options-images/rock-option-removebg-preview.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+#Paper {
+    background-image: url('./options-images/paper-option-removebg-preview.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+#Scissors {
+    background-image: url('./options-images/scissors-option-removebg-preview.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+/* COMPUTER OPTIONS */
+
+.computer-options {
+    display: flex;
+    justify-content: center;
+    gap: 22px;
+    margin-top: 3rem;
+    width: 344px;
+    height: 100px;
+}
+
+.computer-selection {
+    width: 100px;
+    height: 100px;
+    opacity: 0.0;
+    position: absolute;
+}
+
+#C-Scissors {
+    background-image: url('./options-images/scissors-option-removebg-preview.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+#C-Rock {
+    background-image: url('./options-images/rock-option-removebg-preview.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+#C-Paper {
+    background-image: url('./options-images/paper-option-removebg-preview.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
 
 /* POP UP PLAY AGAIN */
 
 .pop-up {
     border: 2px solid black;
-    width: 500px;
+    width: 400px;
+    height: 200px;
     text-align: center;
     top: 0;
     left: 50%;
     transform: translate(-50%, -50%) scale(0.1);
     background-color: darkgray;
     position: absolute;
-    padding: 80px;
-    border-radius: 12px;
+    border-radius: 15px;
     visibility: hidden;
     transition: transform 0.4s, top 0.4s;
+    opacity: 1;
 }
 .open-pop-up {
-    top: 50%;
+    top: 51%;
     transform: translate(-50%, -50%) scale(1);
     visibility: visible;
+}
+
+#btn-play-again {
+    width: 140px;
+    height: 40px;
+    border-radius: 20px;
+    border: 0;
+    margin-top: 20px;
+    box-shadow: 3px 3px 3px rgba(68, 68, 68, 0.603);
+    transition: 200ms;
+}
+
+#btn-play-again:hover {
+    box-shadow: 2px 2px 1px rgba(68, 68, 68, 0.603);
+}
+
+.winner-message {
+    margin-top: 50px;
+    font-size: 22px;
+    font-weight: 600;
+}
+
+/* COMPUTER X PLAYER  */
+
+.points {
+    display: flex;
+    justify-content: center;
+    color: black;
+    display: flexbox;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100px;
+    height: 264px;
+    padding: 31px 0;
+}
+
+
+div .player, div .computer  {
+    width: 50px;
+    height: 50px;
+    padding: 6px 0;
+    background-color: rgb(252, 252, 252);
+    border-radius: 15px;
+    text-align: center;
+}
+.player, .computer {
+    font-size: 32px;
 }
